gitops/apps/actual/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: actual
  labels:
    name: actual
